--- a/pixi.toml
+++ b/pixi.toml
@@ -1,10 +1,10 @@
 [project]
-name = "aim-unicorn"
+name = "readii-fmcib"
 version = "0.1.0"
-description = "Add a short description here"
-authors = ["Sejin Kim <hello@sejin.kim>"]
+description = "Code to run READII negative controls through FMCIB"
+authors = ["Sejin Kim <hello@sejin.kim>", "Katy Scott <k.l.scott16@gmail.com>"]
 channels = ["conda-forge"]
-platforms = ["win-64", "linux-64"]
+platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]
 
 [system-requirements]
 linux="3.10.0"
@@ -14,7 +14,6 @@ imgtools = "pip install --no-build-isolation --disable-pip-version-check -e /clu
 
 [environments]
 default = ["base"]
-surv = ["survival"]
 
 [dependencies]
 python = "3.10.*"
@@ -24,10 +23,3 @@ poetry = ">=1.8.3,<1.9"
 [feature.base.pypi-dependencies]
 project-lighter = { version = "==0.0.2a19" }
 foundation-cancer-image-biomarker = { version = "==1.0.0" }
-
-[feature.survival.dependencies]
-r-base = ">=4.1.3,<4.4"
-lifelines = ">=0.9.4,<0.28"
-rpy2 = ">=3.5.11,<3.6"
-r-mrmre = ">=2.1.2.1,<2.1.3"
-r-essentials = ">=4.1,<5"
