chore: ignore vscode env dir

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,12 @@ spec_file_root.txt
 .env
 .pixi/
 
-*/__pycache__# pixi environments
+*/__pycache__
+
+# pixi environments
 .pixi
 *.egg-info
 
 */__pycache__
+
+.vscode
