--- a/pixi.toml
+++ b/pixi.toml
@@ -15,6 +15,9 @@ fmcib = {features = ["fmcib"], no-default-feature = true}
 python = "3.12.*"
 ipykernel = ">=6.29.5,<7"
 pip = ">=24.3.1,<25"
+numpy = "1.26.4.*"
+python-dotenv = ">=1.0.1,<2"
+ipywidgets = ">=8.1.5,<9"
 
 [pypi-dependencies]
 readii = ">=1.18.0, <2"
