--- a/pixi.toml
+++ b/pixi.toml
@@ -7,6 +7,7 @@ channels = ["conda-forge"]
 platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]
 
 [tasks]
+make_kernel = "ipython kernel install --user --name=readii_fmcib --display-name=readii_fmcib"
 
 [environments]
 fmcib = {features = ["fmcib"], no-default-feature = true}
