--- a/config/RADCURE.yaml
+++ b/config/RADCURE.yaml
@@ -19,11 +19,11 @@ negative_control_regions: ["full", "roi", "non_roi"]
 negative_control_types: ["shuffled", "randomized_sampled"]
 
 # Method to use to crop images to expected input size for FMCIB inference
-crop_method: "cube" 
+crop_method: "centroid" 
 # crop_method options:
 # 1. `bbox` - Find bounding box based on dimensions of the region of interest (ROI), crop image to these coordinates, resize/resample to `FMCIB_INPUT_SIZE`.
 # 2. `cube` - Create cube based on largest ROI bounding box dimension, crop image to these coordinates, resize/resample to `FMCIB_INPUT_SIZE`.
 # 3. `centroid` - Create `FMCIB_INPUT_SIZE` cube centered on the ROI centroid, crop to these coordinates.
 
 # Size to crop/resize images to for FMCIB inference 
-crop_size: (50,50,50)
+crop_size: [50, 50, 50]
